precompiles/utils/macro/tests/precompile/compile-fail/fn-modifiers/multiple-modifiers.stderr
error: A precompile method can have at most one modifier (payable, view)
  --> tests/precompile/compile-fail/fn-modifiers/multiple-modifiers.rs:25:16
   |
25 |     #[precompile::payable]
   |                   ^^^^^^^
